[package]
name = "tosbook"
version = "0.1.0"
authors = ["Talasan Nicholson <talasan.nicholson@gmail.com>"]

[dependencies]
actix-web = "0.7"
listenfd = "0.3"
csv = "1.0.5"
plotlib = { git = "https://github.com/milliams/plotlib" }
maud = { version = "0.20", features = ["actix-web"] }
minifier = "0.0.28"
regex = "1"
chrono = "0.4"
